# winapi_explore

./: Cargo.toml  README.md
src/: main.rs
src/resources/: strings.txt
src/utils/: calculate.rs  enum_window.rs  mod.rs  window_messages.rs
src/window_defs/: edit_ctrl.rs  mod.rs  primary.rs
