[package]
name = "winapi_explore"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_UI_Controls"]
